# gst-vmdisplaysrc

./: AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac  gstvmdisplaysrc.c  gstvmdisplaysrc.h
test/: vmdisplay-stream.c
